@@ -1,5 +1,6 @@
 Version 0.19 (UNRELEASED)
     * Remove contrib/ scripts
+    * Improve error handling
     * Update documentation
     * Bug fixes
 
