@@ -1,3 +1,6 @@
+2023-03-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Add warning if rules contain not compiled-in attributes (closes: #153)
+
 2023-03-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Remove (obsolete) Todo file
 
